<resources>
    <string name="app_name">Aparat</string>
    <string name="downloads">دانلودها</string>
    <string name="following">دنبال شدگان</string>
    <string name="categories">دسته بندی ها</string>
    <string name="home">خانه</string>
    <string name="txt_special">ویژه های آپارات</string>
    <string name="txt_best">برترین ها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptions">توضیحات:</string>
    <string name="download">دانلود</string>
    <string name="like">پسندیدم</string>
    <string name="view">بازدید</string>
    <string name="videoName">نام فیلم:</string>
    <string name="favourites">علاقه مندی ها</string>
    <string name="no">موردی وجود ندارد</string>
    <string name="time">زمان:</string>
    <string name="addedToList">وارد لیست علاقه مندی شد </string>
    <string name="removeFromList">از لیست علاقه مندی حذف شد</string>
    <string name="noData">موردی وجود ندارد!!</string>
    <string name="search">جست و جو</string>
    <string name="watch">تماشا کنید</string>
    <string name="itemNotFound">موردی یافت نشد!!</string>
    <string name="itemFound">مورد یافت شد</string>
    <string name="News">اخبار</string>
    <string name="latestVideos">جدیدترین ویدئوها</string>
    <string name="bestVideos">برترین ها</string>
    <string name="AccountEntry">ورود به حساب کاربری</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="Entry">ورود</string>
    <string name="txt_reg_yet">هنوز عضو نشده اید؟ برای ثبت نام کلیک کنید</string>
    <string name="register">ثبت نام</string>
    <string name="main_page">صفحه اول</string>
    <string name="introduce">معرفی برنامه به دوستان</string>
    <string name="exit">خروج</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="ErrorFails">خطای ورود به صفحه!</string>
    <string name="profile">حساب کاربری</string>
    <string name="txt_menu_list">فهرست آپارات</string>
    <string name="app_version">نسخه 1.0.1</string>
    <string name="UserRegister">ثبت نام کاربر</string>


</resources>