<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_fav"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_fav_video"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.saman.aparat.customView.CustomTextView
                    android:id="@+id/videoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/videoName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/img_fav_video"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.saman.aparat.customView.CustomTextView
                    android:id="@+id/txt_fav_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/videoName"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.saman.aparat.customView.CustomTextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/time"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_fav_video"
                    app:layout_constraintTop_toBottomOf="@id/videoName" />

                <com.saman.aparat.customView.CustomTextView
                    android:id="@+id/txt_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/txt_time"
                    app:layout_constraintTop_toBottomOf="@id/videoName" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_watch"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:background="@drawable/button_box"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.saman.aparat.customView.customTextViewJadid
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_watch"
                    app:layout_constraintEnd_toEndOf="@+id/btn_watch"
                    app:layout_constraintStart_toStartOf="@+id/btn_watch"
                    app:layout_constraintTop_toTopOf="@+id/btn_watch" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>