<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragment"
    xmlns:attrs="http://schemas.android.com/tools"
    tools:context=".ui.main.home.HomeFragment">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/newsPager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.rd.PageIndicatorView
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintBottom_toBottomOf="@+id/newsPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:piv_animationType="scale"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="#0E0B0E"
                app:piv_unselectedColor="#E91E63"
                app:piv_viewPager="@id/newsPager"
                attrs:piv_padding="12dp"
                attrs:piv_radius="10dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    <com.saman.aparat.customView.CustomTextView
        android:id="@+id/txt_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_special"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_news" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_special"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_special" />

    <com.saman.aparat.customView.CustomTextView
        android:id="@+id/txt_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bestVideos"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_special"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_best"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_best" />


        <com.saman.aparat.customView.CustomTextView
            android:id="@+id/txt_new_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latestVideos"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_best"
            tools:ignore="HardcodedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_new_video"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_new_video" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>